--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,26 @@ language: python
 python:
   - '3.7'
 before_install:
+  - sudo apt-get update
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+
+install:
   - git clone https://github.com/CCI-Tools/cate.git
   - cd cate
   - conda env create
   - source activate cate-env
-install:
   - python setup.py install
   - travis_retry pip install --upgrade pip
   - travis_retry pip install pytest
-script:
   - cd ..
+script:
   - pytest -s --junitxml=ci/reports/`date +%F`.xml validation/python/test_data_support.py
 
