--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - source activate cate-env
   - python setup.py install
   - travis_retry pip install --upgrade pip
+  - travis_retry pip install requests
   - travis_retry pip install pytest
   - cd ..
 script:
