--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,31 @@
 language: python
 python:
   - '3.7'
+
+cache:
+  directories:
+    - $HOME/download
+    - $HOME/miniconda
+
+before_cache:
+    - rm -rf $HOME/miniconda/locks $HOME/miniconda/pkgs $HOME/miniconda/var $HOME/miniconda/conda-meta/history
+
 before_install:
-  - sudo apt-get update
-  # We do this conditionally because it saves us some downloading if the
-  # version is the same.
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - source "$HOME/miniconda/etc/profile.d/conda.sh"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
+  - if test -e $HOME/miniconda/bin; then
+    echo "miniconda already installed.";
+  else
+    echo "Installing miniconda.";
+    rm -rf $HOME/miniconda;
+    mkdir -p $HOME/download;
+    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
+    bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
+    source "$HOME/miniconda/etc/profile.d/conda.sh"
+    hash -r
+    conda config --set always_yes yes --set changeps1 no
+    conda update -q conda
+    bash miniconda.sh -b -p $HOME/miniconda
+    conda info -a
+  fi
 
 install:
   - git clone https://github.com/CCI-Tools/cate.git
