--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
   - cd cate
   - conda env create
   - source activate cate-env
-  - python setup.py install
+  - python setup.py develop
   - travis_retry pip install --upgrade pip
   - travis_retry pip install requests
   - travis_retry pip install pytest
