--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ install:
   - travis_retry pip install --upgrade pip
   - travis_retry pip install requests
   - travis_retry pip install pytest
+  - travis_retry pip install xarray
   - cd ..
 script:
   - pytest -s --junitxml=ci/reports/`date +%F`.xml validation/python/test_data_support.py
