--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,14 @@ before_cache:
     - rm -rf $HOME/miniconda/locks $HOME/miniconda/pkgs $HOME/miniconda/var $HOME/miniconda/conda-meta/history
     - rm -rf $HOME/miniconda
 before_install:
-    mkdir -p $HOME/download;
-    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
-    bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
-    source "$HOME/miniconda/etc/profile.d/conda.sh"
-    hash -r
-    conda config --set always_yes yes --set changeps1 no
-    conda update -q conda
-    bash miniconda.sh -u -b -p $HOME/miniconda
-    conda info -a
+    - mkdir -p $HOME/download;
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
+    - bash $HOME/download/miniconda.sh -u -b -p $HOME/miniconda;
+    # source "$HOME/miniconda/etc/profile.d/conda.sh"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    - conda info -a
 
 install:
   - git clone https://github.com/CCI-Tools/cate.git
