--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,26 @@ language: python
 python:
   - '3.7'
 
-cache:
-  directories:
-    - $HOME/download
-    - $HOME/miniconda
+#cache:
+#  directories:
+#    - $HOME/download
+#    - $HOME/miniconda
 
-before_cache:
-    - rm -rf $HOME/miniconda/locks $HOME/miniconda/pkgs $HOME/miniconda/var $HOME/miniconda/conda-meta/history
-    - rm -rf $HOME/miniconda
+#before_cache:
+#    - rm -rf $HOME/miniconda/locks $HOME/miniconda/pkgs $HOME/miniconda/var $HOME/miniconda/conda-meta/history
+
 before_install:
-    - mkdir -p $HOME/download;
-    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
-    - bash $HOME/download/miniconda.sh -u -b -p $HOME/miniconda;
-    # source "$HOME/miniconda/etc/profile.d/conda.sh"
-    - hash -r
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    - conda info -a
+    - if test -e $HOME/miniconda/bin; then
+      echo "miniconda installed already";
+      else
+      mkdir -p $HOME/download;
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
+      bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
+      source "$HOME/miniconda/etc/profile.d/conda.sh"
+      hash -r
+      conda config --set always_yes yes --set changeps1 no
+      conda update -q conda
+      conda info -a
 
 install:
   - git clone https://github.com/CCI-Tools/cate.git
