--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,12 @@ before_install:
       mkdir -p $HOME/download;
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
       bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
-      source "$HOME/miniconda/etc/profile.d/conda.sh"
-      hash -r
-      conda config --set always_yes yes --set changeps1 no
-      conda update -q conda
-      conda info -a
       fi
+    - source "$HOME/miniconda/etc/profile.d/conda.sh"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    - conda info -a
 
 install:
   - git clone https://github.com/CCI-Tools/cate.git
