--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - cd cate
   - conda env create
   - source activate cate-env
-  - python setup.py develop
+  - python setup.py install
   - travis_retry pip install --upgrade pip
   - travis_retry pip install requests
   - travis_retry pip install pytest
