--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
 
 before_cache:
     - rm -rf $HOME/miniconda/locks $HOME/miniconda/pkgs $HOME/miniconda/var $HOME/miniconda/conda-meta/history
-
+    - rm -rf $HOME/miniconda
 before_install:
     - if test -e $HOME/miniconda/bin; then
       echo "miniconda installed already";
