--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,12 @@ cache:
 
 before_cache:
     - rm -rf $HOME/miniconda/locks $HOME/miniconda/pkgs $HOME/miniconda/var $HOME/miniconda/conda-meta/history
-    - rm -rf $HOME/miniconda
+
 before_install:
     - if test -e $HOME/miniconda/bin; then
       echo "miniconda installed already";
       else
+      rm -rf $HOME/miniconda
       mkdir -p $HOME/download;
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
       bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
