--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
       rm -rf $HOME/miniconda
       mkdir -p $HOME/download;
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
-      bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
+      bash $HOME/download/miniconda.sh -u -b -p $HOME/miniconda;
       fi
     - source "$HOME/miniconda/etc/profile.d/conda.sh"
     - hash -r
