--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,11 @@ before_install:
 install:
   - git clone https://github.com/CCI-Tools/cate.git
   - cd cate
-  - if test -e $HOME/miniconda/envs/cate-env; then
-    conda env remove cate-env
-    fi
-  - conda env create
+  #- if test -e $HOME/miniconda/envs/cate-env; then
+  #  conda env remove
+  #  fi
+  #- conda env create
+  - conda env update --file environment.yml  --prune
   - source activate cate-env
   - python setup.py install
   - travis_retry pip install --upgrade pip
