--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ install:
   - travis_retry pip install xarray
   - travis_retry pip install jdcal
   - travis_retry pip install matplotlib
+  - travis_retry pip install shapely
   - cd ..
 script:
   - pytest -s --junitxml=ci/reports/`date +%F`.xml validation/python/test_data_support.py
