--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ install:
   - travis_retry pip install matplotlib
   - travis_retry pip install shapely
   - travis_retry pip install geopandas
+  - travis_retry pip install pillow
   - cd ..
 script:
   - pytest -s --junitxml=ci/reports/`date +%F`.xml validation/python/test_data_support.py
