--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ install:
   - travis_retry pip install shapely
   - travis_retry pip install geopandas
   - travis_retry pip install pillow
+  - travis_retry conda install cartopy -y
   - cd ..
 script:
   - pytest -s --junitxml=ci/reports/`date +%F`.xml validation/python/test_data_support.py
